--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <div class="main">
-        <div class="left_menu">
+    <div class="main px-3">
+        <div class="left_menu py-5 mx-2">
             <ul>
                 <li>Дашборд</li>
                 <li>Мои заказы</li>
@@ -25,20 +25,19 @@
                 <li>Техподдержка</li>
             </ul>
         </div>
-        <div class="content">
+        <div class="content py-5">
             <div class="head">
                 <h1>Мои программы</h1>
-    
+
                 <!-- <input type="text"> -->
                 <div class="input-group flex-nowrap">
                     <span class="input-group-text" id="addon-wrapping"><i class="bi bi-search"></i></span>
-                    <input type="search" class="form-control" aria-label="Username" aria-describedby="addon-wrapping" placeholder="Vvedite nazvanie">
+                    <input type="search" class="form-control" aria-label="Username" aria-describedby="addon-wrapping"
+                        placeholder="Введите название">
                 </div>
             </div>
-            
 
-
-            <div class="table mt-5">
+            <div class="mt-5">
                 <table class="table w-100">
                     <thead>
                         <tr>
@@ -77,33 +76,30 @@
                         </tr>
                     </tbody>
                 </table>
-                <div class="activation mt-5">
-                    <h3>Доступно к активации: 2</h3>
-                    <p>Запросите код и активируйте программу</p>
-                    <button type="button" class="btn btn-primary">Запросить код</button>
-                    <div class="activation_descr d-flex justify-content-between">
+                <div class="activation my-5">
+                    <div class="my-5 p-5 act_available">
+                        <h3>Доступно к активации: 2</h3>
+                        <p>Запросите код и активируйте программу</p>
+                        <button type="button" class="btn btn-primary">Запросить код</button>
+                    </div>
+                    <div class="activation_descr d-flex justify-content-between align-items-end my-5">
                         <div class="activation_descr__left">
                             <p>Дата активации: <span class="fw-bold">2022-09-15 13:54:59</span></p>
                             <p>Наименование компютера: <span class="fw-bold">Home PC</span></p>
                             <p>Комментарий: <span class="fw-bold">Хочу перенести ПК</span></p>
                         </div>
-                        <div class="activation_descr__right mt-5">
-                            <button type="button" class="btn btn-primary">Деактивировать</button>
+                        <div class="activation_descr__right">
+                            <button type="button" class="btn btn-primary mb-4">Деактивировать</button>
                         </div>
                     </div>
-                    <div class="activation mt-5">
-                        <h3>Доступно к активации: 2</h3>
-                        <p>Запросите код и активируйте программу</p>
-                        <button type="button" class="btn btn-primary">Запросить код</button>
-                        <div class="activation_descr d-flex justify-content-between">
-                            <div class="activation_descr__left">
-                                <p>Дата активации: <span class="fw-bold">2022-09-15 13:54:59</span></p>
-                                <p>Наименование компютера: <span class="fw-bold">Home PC</span></p>
-                                <p>Комментарий: <span class="fw-bold">Хочу перенести ПК</span></p>
-                            </div>
-                            <div class="activation_descr__right mt-5">
-                                <button type="button" class="btn btn-primary">Деактивировать</button>
-                            </div>
+                    <div class="activation_descr d-flex justify-content-between align-items-end my-5">
+                        <div class="activation_descr__left">
+                            <p>Дата активации: <span class="fw-bold">2022-09-15 13:54:59</span></p>
+                            <p>Наименование компютера: <span class="fw-bold">Home PC</span></p>
+                            <p>Комментарий: <span class="fw-bold">Хочу перенести ПК</span></p>
+                        </div>
+                        <div class="activation_descr__right">
+                            <button type="button" class="btn btn-primary mb-4">Деактивировать</button>
                         </div>
                     </div>
 
@@ -137,13 +133,10 @@
                                 <td>Активировано(1)</td>
                             </tr>
                         </tbody>
-
-
                 </div>
             </div>
 
         </div>
-
 </body>
 
 </html>
