--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <p>Комментарий: <span class="fw-bold">Хочу перенести ПК</span></p>
                         </div>
                         <div class="activation_descr__right">
-                            <button type="button" class="btn btn-primary mb-4">Деактивировать</button>
+                            <button type="button" class="btn btn-primary m-4">Деактивировать</button>
                         </div>
                     </div>
                     <div class="activation_descr d-flex justify-content-between align-items-end my-5">
@@ -99,7 +99,7 @@
                             <p>Комментарий: <span class="fw-bold">Хочу перенести ПК</span></p>
                         </div>
                         <div class="activation_descr__right">
-                            <button type="button" class="btn btn-primary mb-4">Деактивировать</button>
+                            <button type="button" class="btn btn-primary m-4">Деактивировать</button>
                         </div>
                     </div>
 
@@ -112,27 +112,28 @@
                                 <th scope="row">112192</th>
                                 <td>(2)Детский сад: Питание</td>
                                 <td>08.09.22</td>
-                                <td>1</td>
-                                <td>1</td>
+                                <td><img src="./assets/file.svg" alt=""></td>
+                                <td><img src="./assets/download.svg" alt=""></td>
                                 <td>Активировано(1)</td>
                             </tr>
                             <tr>
                                 <th scope="row">112192</th>
                                 <td>(2)Детский сад: Питание</td>
                                 <td>08.09.22</td>
-                                <td>1</td>
-                                <td>1</td>
+                                <td><img src="./assets/file.svg" alt=""></td>
+                                <td><img src="./assets/download.svg" alt=""></td>
                                 <td>Активировано(1)</td>
                             </tr>
                             <tr>
                                 <th scope="row">112192</th>
                                 <td>(2)Детский сад: Питание</td>
                                 <td>08.09.22</td>
-                                <td>1</td>
-                                <td>1</td>
+                                <td><img src="./assets/file.svg" alt=""></td>
+                                <td><img src="./assets/download.svg" alt=""></td>
                                 <td>Активировано(1)</td>
                             </tr>
                         </tbody>
+                    </table>
                 </div>
             </div>
 
